Fix footer spacing

--- a/assets/admin/editor-wizard/style.scss
+++ b/assets/admin/editor-wizard/style.scss
@@ -6,7 +6,7 @@
 		flex-direction: row;
 		align-items: center;
 		border-top: 1px solid rgba(30, 30, 30, 0.12);
-		padding: 30px;
+		padding: 18px 30px;
 	}
 
 	&__progress {
